apps/monitoring/ntfy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ntfy
          image: docker.io/binwiederhier/ntfy:v2.28.0@sha256:6ef4b819f722fccdc036af611c4774cfdc2de821ab74fdd48bbf4c9d6f8973da
          args:
            - serve
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          startupProbe:
            httpGet:
              path: /v1/health
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            failureThreshold: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            failureThreshold: 3
            periodSeconds: 30
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              readOnly: true
            - name: config
              mountPath: /etc/ntfy/templates/flux.yml
              subPath: flux.yml
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: config
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  labels:
    monitor: ntfy
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 80
      targetPort: http
