apps/monitoring/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`notify.orleans.io`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
  tls:
    secretName: wildcard-orleans-io
